bug-fix ==> overflow parent of tag <a></a> in home page and fix padding of header name in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,7 @@ li {
 
 .name-header-mob-right p {
     padding-top: 0.8rem;
+    margin-right: 0;
 }
 
 #navbar-desktop {
@@ -279,7 +280,7 @@ li {
     flex-direction: column;
     align-items: center;
     padding-top: 3rem; 
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .short-intro h1 {
